Added alphaBeta algorithm